2012-04-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Bump to beta5.

2012-05-09  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix wrapped HFS+ handling.

	* grub-core/fs/fshelp.c (grub_fshelp_read_file): New argument
	blocks_start. All users updated.
	* grub-core/fs/hfsplus.c (grub_hfsplus_read_block): Don't add
	wrapping offset.
	(grub_hfsplus_read_file): Pass embedding offset to fshelp_read_file.

2012-05-09  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix long symlinks on reiserfs.

	* grub-core/fs/reiserfs.c (grub_fshelp_node): New field size.
	(grub_reiserfs_read_symlink): Use grub_reiserfs_read_real.
	(grub_reiserfs_iterate_dir): Save size for non-directories.
	(grub_reiserfs_open): Don't reread stat block as we already know the
	size.
	(grub_reiserfs_read): Split into...
	(grub_reiserfs_read_real): ... and ...
	(grub_reiserfs_read): ...this.

2012-05-09  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix non-indexed JFS.

	* grub-core/fs/jfs.c (grub_jfs_sblock): New field flags.
	(grub_jfs_data): New field namecomponentlen.
	(grub_jfs_mount): Fill namecomponentlen.
	(grub_jfs_getent): Use namecomponentlen rather than hardcoded 11.

2012-05-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/script/yylex.l: Ugly fix for "\\\n ".
	* tests/grub_script_echo1.in: Add tests.

2012-05-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-install.in: Ignore empty devicetree directory.

2012-05-08  Bean  <bean123ch@gmail.com>

	* grub-core/net/ip.c (reassemble): Make asm_buffer into asm_netbuff.
	All users updated.
	(free_rsm): Free header as well.
	(free_old_fragments): Fix memory leak.
	* grub-core/net/netbuff.c (grub_netbuff_free): Make return void.
	* grub-core/net/tftp.c (tftp_receive): Fix memory leak.
	(destroy_pq): Likewise.
	* include/grub/net/netbuff.h (grub_netbuff_free): Make return void.

2012-05-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/hashsum.c (grub_cmd_hashsum): Align space for